--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,40 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+nav {
+  width: 100%;
+  height: 75px;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.nav-links {
+  display: flex;
+  height: 100%;
+}
+
+.nav-links li {
+  display: flex;
+  list-style-type: none;
+  padding: 0 15px;
+  height: 100%;
+}
+
+.nav-links a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+  height: 100%;
+}
+
+.nav-left {
+  margin-right: auto;
+}
+
+.nav-right {
+  margin-left: auto;
+}
