--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,25 @@
   box-sizing: border-box;
 }
 
-nav {
-  width: 100%;
-  height: 75px;
-  background-color: white;
+header {
   position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
+}
+
+.btn {
+  padding: 5px 10px;
+  text-decoration: none;
+}
+
+.btn-blue {
+  background-color: #0061ff;
+  color: white;
+}
+
+nav {
+  height: 70px;
 }
 
 .nav-links {
@@ -18,18 +30,19 @@ nav {
   height: 100%;
 }
 
-.nav-links li {
-  display: flex;
-  list-style-type: none;
-  padding: 0 15px;
-  height: 100%;
-}
-
-.nav-links a {
+nav li {
   display: flex;
   align-items: center;
-  text-decoration: none;
+  list-style: none;
+  height: 100%;
+  margin: 0 15px;
+}
+
+.nav-links .nav-a {
+  display: flex;
+  align-items: center;
   color: black;
+  text-decoration: none;
   height: 100%;
 }
 
@@ -39,4 +52,8 @@ nav {
 
 .nav-right {
   margin-left: auto;
+}
+
+.nav-a {
+  height: 100%;
 }
