--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-family: "Poppins", sans-serif;
+}
+
 /* Header and nav styles */
 header {
   position: fixed;
@@ -79,14 +83,13 @@ nav li {
 }
 
 .first-section h1 {
-  font-size: 80px;
+  font-size: 70px;
   padding-bottom: 20px;
 }
 
 .small-container {
   display: flex;
   justify-content: center;
-  position: absolute;
 }
 
 .right-small-container img {
@@ -105,6 +108,6 @@ nav li {
 
 .fa-arrow-down {
   font-size: 50px;
-  position: relative;
-  top: 300px;
+  position: absolute;
+  bottom: 10px;
 }
