--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ html {
   font-family: "Poppins", sans-serif;
 }
 
+li {
+  list-style: none;
+}
+
 /* Header and nav styles */
 header {
   position: fixed;
@@ -30,7 +34,6 @@ nav {
 nav li {
   display: flex;
   align-items: center;
-  list-style: none;
   height: 100%;
   margin: 0 15px;
 }
@@ -69,7 +72,6 @@ nav li {
 /* General Styles */
 .container {
   max-width: 1100px;
-  border: 1px solid black;
   margin: 0 auto;
   justify-content: center;
   padding: 30px 30px;
@@ -110,4 +112,89 @@ nav li {
   font-size: 50px;
   position: absolute;
   bottom: 10px;
+}
+
+.container h2 {
+  font-size: 35px;
+  padding-top: 150px;
+}
+
+form {
+  padding: 50px 0;
+}
+
+.table {
+  border: 1px solid #e6e6e8;
+  width: 30%;
+  flex: 1 1 auto;
+  margin-bottom: 40px;
+}
+
+.table-container {
+  padding: 30px;
+}
+
+.target {
+  border-bottom: 1px solid #e6e6e8;
+  text-align: center;
+  padding: 5px;
+}
+
+.subscribe {
+  gap: 50px;
+}
+
+.table-container li {
+  padding: 15px 0;
+}
+
+.buy-now {
+  padding-bottom: 50px;
+}
+
+.table-button {
+  max-width: 220px;
+  margin: 40px auto;
+}
+
+.table h3,
+h4 {
+  padding-bottom: 30px;
+}
+
+.price {
+  font-weight: bold;
+}
+
+.fee {
+  color: lightgray;
+  padding-bottom: 40px;
+}
+
+.fa-check {
+  color: #1d76ff;
+}
+
+.table-large {
+  border: 1px solid #e6e6e8;
+}
+
+.flex-table-container {
+  display: flex;
+}
+
+.table-button-flex {
+  margin-left: auto;
+}
+
+.table-large p {
+  max-width: 70%;
+}
+
+.table-large h3 {
+  margin-bottom: 20px;
+}
+
+.table-large .price {
+  margin-bottom: 50px;
 }
