--- a/css/style.css
+++ b/css/style.css
@@ -69,13 +69,29 @@ nav li {
   color: white;
 }
 
+.btn-white {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  padding: 10px;
+}
+
 /* General Styles */
 .container {
   max-width: 1100px;
-  margin: 0 auto;
+  margin: 0 auto 100px;
   justify-content: center;
   padding: 30px 30px;
   position: relative;
+}
+
+h2 {
+  font-size: 35px;
+  padding-bottom: 50px;
+}
+
+form {
+  padding-bottom: 50px;
 }
 
 /* Main Styles */
@@ -112,15 +128,6 @@ nav li {
   font-size: 50px;
   position: absolute;
   bottom: 10px;
-}
-
-.container h2 {
-  font-size: 35px;
-  padding-top: 150px;
-}
-
-form {
-  padding: 50px 0;
 }
 
 .table {
@@ -197,4 +204,27 @@ h4 {
 
 .table-large .price {
   margin-bottom: 50px;
+}
+
+.small-container.reverse {
+  flex-direction: row-reverse;
+  align-items: center;
+  gap: 40px;
+}
+
+.small-container.reverse h3 {
+  margin-bottom: 10px;
+}
+
+.card {
+  max-width: 30%;
+  flex: 1 1 auto;
+}
+
+.card img {
+  max-width: 100%;
+}
+
+.card h3 {
+  padding-bottom: 15px;
 }
