--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,12 @@ nav li {
   padding: 10px;
 }
 
+.no-border {
+  background-color: white;
+  color: black;
+  padding: 10px;
+}
+
 /* General Styles */
 .container {
   max-width: 1100px;
@@ -227,4 +233,97 @@ h4 {
 
 .card h3 {
   padding-bottom: 15px;
+}
+
+.small-container.card-section {
+  gap: 50px;
+  flex-wrap: wrap;
+}
+
+.dropbox-business {
+  max-width: 60%;
+}
+
+.mini-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 30%;
+  flex: 1 1 auto;
+}
+
+.mini-square {
+  width: 50%;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mini-square img {
+  max-width: 50%;
+}
+
+.column {
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 40px;
+  background-color: #f5f5f5;
+}
+
+.column img {
+  margin-bottom: 70px;
+}
+
+.column p {
+  padding-bottom: 20px;
+}
+
+.credits {
+  padding-bottom: 100px;
+}
+
+.design {
+  background-color: #a2d39b;
+}
+
+.arizona {
+  background-color: #61082b;
+}
+
+.florida {
+  background-color: #0093ce;
+}
+
+.topps {
+  background-color: #ff1c1c;
+}
+
+.bicycle {
+  background-color: #d5001f;
+}
+
+.hearst {
+  background-color: #b4d0e7;
+}
+
+.lonely {
+  background-color: #0d2481;
+}
+
+.channel {
+  background-color: #ffd830;
+}
+
+.bkg {
+  background-color: #b4d0e7;
+}
+
+.flex-business {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 80px;
+}
+
+.flex-business h2 {
+  color: #61082b;
 }
