--- a/css/style.css
+++ b/css/style.css
@@ -327,3 +327,19 @@ h4 {
 .flex-business h2 {
   color: #61082b;
 }
+
+.faq {
+  border-bottom: 1px solid black;
+  display: flex;
+  align-items: center;
+}
+
+.question {
+  font-weight: bold;
+  padding: 40px 0;
+}
+
+.arrow {
+  margin-left: auto;
+  margin-right: 40px;
+}
